linked with css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milestone 9</title>
+    <link rel="stylesheet" href="Styles/index.css">
 </head>
 <body>
     <header>
         <nav>
             <h3>G3 Architects</h3>
-            <ul>
+            <ul class="navbar">
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact Us</a></li>
