--- a/index.html
+++ b/index.html
@@ -17,9 +17,20 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="banner-division">
+            <h3 class="banner-title">
+                Brand New <br>
+                Group of Architects
+            </h3>
+            <p class="banner-subtitle">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+            <button class="primary-clr banner-btn">Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="">
     </header>
     <main>
-
+        
     </main>
     <footer>
 
