Start write code again

--- a/index.html
+++ b/index.html
@@ -3,37 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milestone 9</title>
-    <link rel="stylesheet" href="Styles/index.css">
+    <title>Milestone 9 practice1</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <h3>G3 Architects</h3>
-            <ul class="navbar">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact Us</a></li>
-                <li><a href="">Login</a></li>
-            </ul>
-        </nav>
-        <div class="banner-division">
-            <h3 class="banner-title">
-                Brand New <br>
-                Group of Architects
-            </h3>
-            <p class="banner-subtitle">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
-            </p>
-            <button class="primary-clr banner-btn">Explore More</button>
-        </div>
-        <img src="images/banner.png" alt="">
-    </header>
-    <main>
-        
-    </main>
-    <footer>
-
-    </footer>
+    
 </body>
 </html>
