fixed some issues

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <img class="banner-img" src="images/banner.png" alt="">
     </div>
     </header>
-    
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
+
 </body>
 </html>
