--- a/index.html
+++ b/index.html
@@ -34,10 +34,23 @@
     </div>
     </header>
     <main>
-
+        <!-- features section  -->
+        <section class="fetures-section">
+            <div class="feature-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feture-details">
+                <h3 class="feature-header">Quick list of Our Features</h3>
+                <p class="feature-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="feature-btn">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
-        
+
     </footer>
 
 </body>
