--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Group of Architects 
         </h3>
         <p class="banner-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        <button class="banner-btn p-btn-clr">Explore More</button>
+        <button class="primary-btn p-btn-clr">Explore More</button>
     </div>
     <div class="banner-img-section">
         
@@ -35,17 +35,17 @@
     </header>
     <main>
         <!-- features section  -->
-        <section class="fetures-section">
-            <div class="feature-img">
+        <section class="fetures-container">
+            <div class="feature-img-container">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
             <div class="feture-details">
-                <h3 class="feature-header">Quick list of Our Features</h3>
+                <h3 class="feature-header"> <span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="features-span">Features</span></h3>
                 <p class="feature-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="feature-btn">Explore More</button>
+                <button class="primary-btn p-btn-clr">Explore More</button>
             </div>
         </section>
     </main>
