do some responsive work on teams section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <button class="primary-btn p-btn-clr">Explore More</button>
             </div>
         </section>
+        <section class="experience-section">
+            
+        </section>
     </main>
     <footer>
 
