rearrange some class name

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
     </div>
     </header>
     <main>
-        <!-- features section  -->
-        <section class="fetures-container">
-            <div class="feature-img-container">
+        <!-- teams section  -->
+        <section class="teams-container">
+            <div class="teams-img-container">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
-            <div class="feture-details">
-                <h3 class="feature-header"> <span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="features-span">Features</span></h3>
-                <p class="feature-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="teams-details">
+                <h3 class="teams-header"> <span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="teams-span">teams</span></h3>
+                <p class="teams-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="primary-btn p-btn-clr">Explore More</button>
             </div>
         </section>
