added fact card section and design

--- a/index.html
+++ b/index.html
@@ -48,9 +48,39 @@
                 <button class="primary-btn p-btn-clr">Explore More</button>
             </div>
         </section>
-        <section class="experience-section">
+        <!-- Feature Section start here  -->
+        <section class="feature-section">
             
         </section>
+        <!-- Fact Section Start Here  -->
+         <section class="fact-section">
+            <div class="fact-text">
+                <h3 class="fact-text-tittle">Some Facts</h3>
+                <p class="fact-text-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="fact-img-card-container">
+                <div class="img-card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="img-card-tittle">54</h3>
+                    <p class="img-card-para">Awards Winnings</p>
+                </div>
+                <div class="img-card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="img-card-tittle">1458</h3>
+                    <p class="img-card-para">Project Finished</p>
+                </div>
+                <div class="img-card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="img-card-tittle">590</h3>
+                    <p class="img-card-para">Clients Worked</p>
+                </div>
+                <div class="img-card">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="img-card-tittle">22578</h3>
+                    <p class="img-card-para">Email Send</p>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
