--- a/index.html
+++ b/index.html
@@ -50,7 +50,35 @@
         </section>
         <!-- Feature Section start here  -->
         <section class="feature-section">
-            
+            <div class="feature-details">
+                <h3 class="feature-details-tittle">Features you will love & enjoy</h3>
+                <p class="feature-details-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="feature-card-section">
+                    <div class="feature-card">
+                        <h3 class="feature-card-tittle">Dexktop & Mobile Version</h3>
+                        <p class="feature-card-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3 class="feature-card-tittle">Drag & Drop Builder</h3>
+                        <p class="feature-card-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3 class="feature-card-tittle">Awesome Modern Design</h3>
+                        <p class="feature-card-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3 class="feature-card-tittle">Super Easy to Edit</h3>
+                        <p class="feature-card-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+                <div class="feature-btn">
+                    <h3>10+Year</h3>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <!-- Fact Section Start Here  -->
          <section class="fact-section">
